chore: use scaffold

--- a/frb_example/gallery/web/index.html
+++ b/frb_example/gallery/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="flutter_via_create">
+  <meta name="apple-mobile-web-app-title" content="frb_example_gallery">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>flutter_via_create</title>
+  <title>frb_example_gallery</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
