deploy: 683eac379bef039672641d33ec3871f6374cde38

--- a/command_line.html
+++ b/command_line.html
@@ -261,6 +261,9 @@ Options:
       --no-dart3
           Disable language features introduced in Dart 3
 
+  -s, --shared-rust-output &lt;SHARED_RUST_OUTPUT&gt;
+          
+
       --keep-going
           If set, the program will delay error reporting until all codegen operations have completed
 
