--- a/feature/multiple_files.html
+++ b/feature/multiple_files.html
@@ -177,10 +177,10 @@
 <p>When having a large project, it is often insufficient to put everything in a single <code>api.rs</code>, but instead we may want to separate it into <code>api_of_one_module.rs</code>, <code>api_of_another_module.rs</code>, etc. That is why we have this feature.</p>
 <p>Basically, just specify all input Rust files and all output locations and we are done. Here is an example:</p>
 <pre><code class="language-shell">flutter_rust_bridge_codegen \
-  --rust-input &quot;$REPO_DIR/native/src/api_1.rs&quot; &quot;$REPO_DIR/native/src/api_2.rs&quot; \
-  --dart-output &quot;$REPO_DIR/lib/bridge_generated_api_1.dart&quot; &quot;$REPO_DIR/lib/bridge_generated_api_2.dart&quot; \
-  --class-name ApiClass1 ApiClass2 \
-  --rust-output generated_api_1 generated_api_2
+  --rust-input &quot;$REPO_DIR/native/src/api_block_1.rs&quot; &quot;$REPO_DIR/native/src/api_block_2.rs&quot; \
+  --dart-output &quot;$REPO_DIR/lib/bridge_generated_api_block_1.dart&quot; &quot;$REPO_DIR/lib/bridge_generated_api_block_2.dart&quot; \
+  --class-name ApiBlock1Class ApiBlock2Class \
+  --rust-output generated_api_block_1 generated_api_block_2
 </code></pre>
 <p>For more details, have a look at <a href="../article/generate_multiple_files.html">this article</a>.</p>
 
