deploy: 1a5b35a45b7ddca36abfa2294174fc26e1806b36

--- a/print.html
+++ b/print.html
@@ -183,6 +183,8 @@
 <p><a href="https://flutter.dev/docs/development/packages-and-plugins/favorites"><img src="https://github.com/fzyzcjy/flutter_rust_bridge/raw/master/book/flutter_favorite.png" width="200" /></a></p>
 <p><img src="https://github.com/fzyzcjy/flutter_rust_bridge/raw/master/book/logo.png" alt="Logo" /></p>
 <p>Want to combine the best between <a href="https://flutter.dev/">Flutter</a>, a cross-platform hot-reload rapid-development UI toolkit, and <a href="https://www.rust-lang.org/">Rust</a>, a language empowering everyone to build reliable and efficient software? Here it comes!</p>
+<h2 id="-flutter_rust_bridge-v2-is-there-this-is-the-old-v1-version"><a class="header" href="#-flutter_rust_bridge-v2-is-there-this-is-the-old-v1-version">🎉 flutter_rust_bridge v2 is there! This is the old v1 version.</a></h2>
+<p>Please visit https://github.com/fzyzcjy/flutter_rust_bridge for latest information.</p>
 <h2 id="-advantages"><a class="header" href="#-advantages">🚀 Advantages</a></h2>
 <ul>
 <li><strong>Memory-safe</strong>: Never need to think about malloc/free.</li>
@@ -4353,7 +4355,7 @@ Options:
 </code></pre>
 <h2 id="flutter_rust_bridge_serve"><a class="header" href="#flutter_rust_bridge_serve"><code>flutter_rust_bridge_serve</code></a></h2>
 <pre><code class="language-shell">$ dart run flutter_rust_bridge_serve --help
-flutter_rust_bridge_serve 1.82.5
+flutter_rust_bridge_serve 1.82.6
 Develop Rust WASM modules with cross-origin isolation.
 
 USAGE:
